Resolves: fdo#87015 image missing from doc

regression from

commit e0cce521f1ad0cc384d30ce2f1077ea229fffe62
Author:     Armin Le Grand <alg@apache.org>
AuthorDate: Thu Jan 10 16:28:40 2013 +0000
Commit:     Caolán McNamara <caolanm@redhat.com>
CommitDate: Thu Jun 13 14:50:46 2013 +0100
    Resolves: #i121504# Support for alpha channel in clipboard for all systems
    (cherry picked from commit ef3931ff410117e1237b3bef7bc090e8b83b9519)

which blindly just bulldozed out the bMSOFormat branch

Change-Id: Iec354f1fb585f0803b9df472bc9ec9e103aa5847
(cherry picked from commit 470fcca594ba4f6bf473d4d44b415c2ba151b0d9)
Reviewed-on: https://gerrit.libreoffice.org/13875
Reviewed-by: Andras Timar <andras.timar@collabora.com>
Tested-by: Andras Timar <andras.timar@collabora.com>